--- a/tos.html
+++ b/tos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Makeroid ToS</title>
+    <title>Terms of Service - Makeroid</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-pink.min.css">
@@ -48,10 +48,7 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="demo-crumbs mdl-color-text--grey-500">
-              Terms of Service | Makeroid Builder
-            </div>
-            <h3>To start using Makeroid Builder, you must accept our Terms & Conditions</h3>
+            <h3>Makeroid Terms of Service</h3>
             <hr />
             <h4>Makeroid Builder Privacy Policy and Terms of Use</h4>
             <p>Welcome to Makeroid Builder website (the "Site"). The Site runs on Google's App Engine service. You must read and agree to these Terms of Service and Privacy Policy (collectively, the "Terms") prior to using any portion of this Site. These Terms are an agreement between you and Makeroid. If you do not understand or do not agree to be bound by these Terms, please immediately exit this Site.</p>
