--- a/tos.html
+++ b/tos.html
@@ -28,7 +28,7 @@
       }
       .demo-content {
         border-radius: 2px;
-        padding: 80px 56px;
+        padding: 10px 56px;
         margin-bottom: 80px;
       }
       .demo-content h3 {
@@ -48,7 +48,7 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3>Makeroid Terms of Service</h3>
+            <h3 class="mdl-typography--display-2 mdl-typography--text-center">Makeroid Terms of Service</h3>
             <hr />
             <h4>Makeroid Builder Privacy Policy and Terms of Use</h4>
             <p>Welcome to Makeroid Builder website (the "Site"). The Site runs on Google's App Engine service. You must read and agree to these Terms of Service and Privacy Policy (collectively, the "Terms") prior to using any portion of this Site. These Terms are an agreement between you and Makeroid. If you do not understand or do not agree to be bound by these Terms, please immediately exit this Site.</p>
